# BarnesHut

./: .gitignore  ANALYSIS_DATA_STRUCTURES.md  BHtreetest.cpp  BUILD_VISUALIZATION.md  CLAUDE.md  CMakeLists.txt  Makefile  PERFORMANCE.md  README.md  concepts.h  file.cpp  file.h  generate_data.cpp  ncb  object_pool.h  particle.cpp  particle.h  quadtree_visualizer.cpp  quadtree_visualizer.h  stdinc.cpp  stdinc.h  tree.cpp  tree.h  vektor.h  visual_1.md  visualize_2d_projections.gnu  visualize_3d.gnu  visualize_all.sh  visualize_animation.gnu  visualize_density_heatmap.gnu  visualize_quadtree.cpp  visualize_velocity_field.gnu
visualization/: README.md  camera.cpp  camera.h  cuda_renderer.cu  cuda_renderer.cuh  download_glad.sh  gl_renderer.cpp  gl_renderer.h  visualization_main.cpp  window_manager.cpp  window_manager.h
visualization/shaders/: particle.frag  particle.vert
